--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/KishanPatelGit/mycyc#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "mongoose": "^5.11.19",
     "nodemon": "^2.0.7"
   }
