--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Bicycle E-Renting Web Application",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "clientinstall": "npm install --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -17,8 +21,11 @@
   },
   "homepage": "https://github.com/KishanPatelGit/mycyc#readme",
   "dependencies": {
+    "config": "^3.3.6",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.19",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.0",
     "nodemon": "^2.0.7"
   }
 }
