--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   },
   "homepage": "https://github.com/KishanPatelGit/mycyc#readme",
   "dependencies": {
+    "concurrently": "^6.0.0",
     "config": "^3.3.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.0",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.0",
     "nodemon": "^2.0.7"
   }
 }
