--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@date-io/date-fns": "^2.10.8",
+    "@date-io/moment": "^2.10.8",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-datepicker": "^3.6.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
