--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "config": "^3.3.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.0",
+    "gsap": "^3.6.0",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.0",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "@types/gsap": "^1.20.2"
   }
 }
