--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "gsap": "^3.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-datepicker": "^3.6.0",
